css/styles.css
/* --------------- Global styles --------------- */

header {
  background-color: #dce7f3;
  position: fixed;
  width: 100%;
}

.logo {
  width: 90px;
  margin-top: 5px;
}

body {
  margin: 0px;
  font-family: "Alegreya Sans", sans-serif;
  font-size: 16px;
  text-align: center;
  color: #fff;
}

h1,
h2 {
  font-family: "Alegreya", serif;
  font-size: 36px;
  color: #fff;
}

.button {
  background-color: #ff5e00;
  padding: 5px 35px;
  border-radius: 50px;
  color: #fff;
  font-family: "Alegreya", serif;
  font-variant-caps: all-small-caps;
  text-decoration: none;
  font-weight: 700;
  font-size: 22px;
}
nav {
  padding: 0px;
  margin: 0px;
  min-height: 55px;
}

ul {
  list-style-type: none;
  display: flex;
  justify-content: space-around;
  background-color: #0a3641;
  position: sticky;
  padding-left: 0px;
}

li {
  padding: 10px;
}
.navbar a {
  color: #fff;
  /*padding: 20px;*/
  text-decoration: none;
  display: block;
  font-weight: 400;
}

.navbar i {
  display: block;
}

/* --------------- Home page --------------- */
.content {
  /*min-height: 40vh;*/
  background-size: cover;
  background-position: bottom;
  padding-top: 40px;
}

.content h1,
.content h2,
.content p {
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(10px);
}

.content h1,
.content h2 {
  padding-top: 10px;
  margin-bottom: 0px;
}
.content p {
  margin-top: 0px;
  padding-bottom: 10px;
}
.main {
  background-image: url(../images/homepage/main-picture.jpg);
  min-height: 100vh;
  background-position: center right;
  padding-top: 20px;
}

.women {
  background-image: url(../images/homepage/women-jackets.jpg);
  min-height: 40vh;
  background-size: cover;
  background-position: bottom;
  padding-top: 40px;
}

.men {
  background-image: url(../images/homepage/men-jackets.jpg);
  min-height: 40vh;
  background-size: cover;
  background-position: bottom;
  padding-top: 40px;
}

.about {
  background-image: url(../images/homepage/about-us.jpg);
  background-position: center;
  min-height: 50vh;
}

